Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="redux-voting-server" class="anchor" href="#redux-voting-server" aria-hidden="true"><span class="octicon octicon-link"></span></a>Redux Voting Server</h1>
 
-<p>This project works with <a href="https://github.com/marcacyr/redux-voting-client">redux-voting-client, which can be found here</a>.</p>
+<p>This project works with <a href="http://marcacyr.github.io/redux-voting-client/">redux-voting-client, which can be found here</a>.</p>
 
 <p>See that project for more info about this project. Many of the dependencies are the same (with only slight differences) and
 the two work hand-in-hand and are both required to run the application in its entirety.</p>
